--- a/TZ-Wild Wild/TZ-Wild Wild/About/AboutViewContoller.storyboard
+++ b/TZ-Wild Wild/TZ-Wild Wild/About/AboutViewContoller.storyboard
@@ -15,13 +15,59 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sky Challenge" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TF9-23-zaQ">
+                                <rect key="frame" x="96" y="74" width="201" height="36"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C9q-sh-tnx">
+                                <rect key="frame" x="16" y="130" width="361" height="122"/>
+                                <string key="text">In Sky Challenge, you take control of an airplane flying through the sky, collecting bonuses and avoiding obstacles. The game features simple yet engaging gameplay with dynamic cloud animations and collision-responsive functionality.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mechanics" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eZd-dS-zAW">
+                                <rect key="frame" x="16" y="262" width="102" height="24"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Tl-0g-XAb">
+                                <rect key="frame" x="16" y="296" width="361" height="446.33333333333326"/>
+                                <mutableString key="text">Airplane Control: The airplane can move up and down using the control buttons. Your task is to keep the airplane within the screen boundaries and avoid clouds moving from left to right.
+
+Cloud Animation: Clouds are animated to gradually move from the right edge of the screen to the left. Each cloud has a random height and animation speed.
+
+Score: By collecting bonuses and avoiding obstacles, you earn points that are displayed on the score in the top-left corner of the screen.
+
+Pause and Resume: The player can open the settings menu by pressing the corresponding button. While viewing the settings, the game automatically pauses, and cloud animations stop. After closing the settings menu, the game resumes from the same point where it was paused.</mutableString>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="TF9-23-zaQ" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="Bs5-ys-cBN"/>
+                            <constraint firstItem="eZd-dS-zAW" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="Fcw-kZ-eAw"/>
+                            <constraint firstItem="C9q-sh-tnx" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="FsH-VZ-f9f"/>
+                            <constraint firstItem="eZd-dS-zAW" firstAttribute="top" secondItem="C9q-sh-tnx" secondAttribute="bottom" constant="10" id="Hrf-B8-2Og"/>
+                            <constraint firstItem="1Tl-0g-XAb" firstAttribute="top" secondItem="eZd-dS-zAW" secondAttribute="bottom" constant="10" id="IC2-dX-LOz"/>
+                            <constraint firstAttribute="trailing" secondItem="C9q-sh-tnx" secondAttribute="trailing" constant="16" id="II8-6x-Kmt"/>
+                            <constraint firstItem="C9q-sh-tnx" firstAttribute="top" secondItem="TF9-23-zaQ" secondAttribute="bottom" constant="20" id="bW9-ma-TrP"/>
+                            <constraint firstItem="1Tl-0g-XAb" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="jLv-xc-tBE"/>
+                            <constraint firstItem="TF9-23-zaQ" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="15" id="jmG-7G-OZI"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="1Tl-0g-XAb" secondAttribute="trailing" constant="16" id="vYu-vi-RhT"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="28" y="4"/>
+            <point key="canvasLocation" x="26.717557251908396" y="3.5211267605633805"/>
         </scene>
     </scenes>
     <resources>
