--- a/TZ-Wild Wild/TZ-Wild Wild/Game/GameViewController.storyboard
+++ b/TZ-Wild Wild/TZ-Wild Wild/Game/GameViewController.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -106,7 +107,7 @@
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LMd-wK-MS4">
                                 <rect key="frame" x="15" y="139" width="363" height="500"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="500" id="76A-Pp-rdR"/>
                                 </constraints>
@@ -125,13 +126,14 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="CBj-f5-4QO" secondAttribute="trailing" constant="15" id="3Nn-ce-Sae"/>
                             <constraint firstItem="sMR-P9-cOV" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="B7G-9c-rT2"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="LMd-wK-MS4" secondAttribute="trailing" constant="15" id="LOS-Og-zoX"/>
+                            <constraint firstItem="wOT-ne-3h4" firstAttribute="top" secondItem="LMd-wK-MS4" secondAttribute="bottom" constant="54" id="QFS-Y8-EME"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="CBj-f5-4QO" secondAttribute="bottom" constant="50" id="Y0n-Mp-CBc"/>
+                            <constraint firstItem="CBj-f5-4QO" firstAttribute="top" secondItem="LMd-wK-MS4" secondAttribute="bottom" constant="54" id="YzS-kd-Jia"/>
                             <constraint firstItem="sMR-P9-cOV" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="25" id="bqp-bU-CFf"/>
                             <constraint firstItem="8uX-MR-Jch" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="35" id="hug-b9-RdM"/>
                             <constraint firstItem="LMd-wK-MS4" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="15" id="jYp-CI-kxg"/>
                             <constraint firstItem="wOT-ne-3h4" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="15" id="lE5-EQ-7TB"/>
                             <constraint firstItem="LMd-wK-MS4" firstAttribute="top" secondItem="8uX-MR-Jch" secondAttribute="bottom" constant="20" id="qNQ-XT-fiM"/>
-                            <constraint firstItem="wOT-ne-3h4" firstAttribute="top" secondItem="LMd-wK-MS4" secondAttribute="bottom" constant="54" id="rFQ-BL-EoM"/>
                             <constraint firstItem="8uX-MR-Jch" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="10" id="rI6-8j-zeO"/>
                         </constraints>
                     </view>
@@ -165,5 +167,8 @@
     </scenes>
     <resources>
         <image name="gearshape" catalog="system" width="128" height="123"/>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
